fix css bug with footer getting clipped

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,7 @@ h1, h2, h3, h4, h5, h6 {
     background: white;
     box-shadow: 0px -2px 5px 0px;
     position: fixed;
+    z-index: 500;
     bottom: 0;
     width: 100%;
 
